--- a/OnlineStore/Content/Site.css
+++ b/OnlineStore/Content/Site.css
@@ -1799,6 +1799,7 @@ body {
 .about__product__text {
     display: flex;
     flex-direction: column;
+    width: 60%;
 }
 
 .about__product__text__header {
