--- a/OnlineStore/Content/Site.css
+++ b/OnlineStore/Content/Site.css
@@ -148,6 +148,11 @@ body {
     font-weight: 700;
 }
 
+.header__nav__text__link:hover {
+    text-decoration: none;
+    color: #000000;
+}
+
 .header__nav__link {
     text-decoration: none;
     color: #000000;
@@ -155,6 +160,11 @@ body {
     font-size: 13px;
     line-height: 25px;
     padding-right: 85px;
+}
+
+.header__nav__link:hover {
+      text-decoration: none;
+      color: #000000;
 }
 
     .header__nav__link:last-child {
@@ -182,23 +192,34 @@ body {
     margin-top: 200px;
 }
 
-    .header__img__text h1 {
-        font-weight: 500;
-        font-size: 55px;
-        line-height: 32px;
-        text-align: center;
-    }
+.h1__margin__none {
+    margin: 0;
+}
 
-    .header__img__text span {
+
+.header__img__text__h1 {
+    font-weight: 500;
+    font-size: 55px;
+    line-height: 32px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.header__img__text span {
         font-weight: 400;
         font-size: 18px;
         line-height: 31px;
         letter-spacing: 2px;
         text-align: center;
-    }
+}
 
 
 .header__img__btn__1 a, .header__img__btn__2 a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.header__img__btn__1 a:hover, .header__img__btn__2 a:hover {
     text-decoration: none;
     color: #ffffff;
 }
@@ -216,7 +237,7 @@ body {
     font-size: 14px;
     line-height: 21px;
     cursor: pointer;
-    margin-top: 70px;
+    margin-top: 50px;
     margin-right: 20px;
 }
 
@@ -449,7 +470,7 @@ body {
     }
 
     .product__content__block .product__content__block__header {
-        margin-top: 15px;
+        margin: 15px 0px;
         font-weight: 700;
         font-size: 19px;
         line-height: 24px;
@@ -468,11 +489,12 @@ body {
         font-size: 14px;
         line-height: 31px;
         text-decoration: none;
-        color: rgba(35, 98, 87, 1);
+        color: #385f8a;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
+
 
 
 .product__items__block__price__order {
@@ -482,11 +504,23 @@ body {
     justify-content: space-between;
 }
 
+product__items__block__price__div {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .product__items__block__order {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.product__items__block__order:hover {
+    text-decoration: none;
+    color: rgba(35, 98, 87, 1);
+    transition: 1s;
 }
 
     .product__items__block__order img {
@@ -512,6 +546,11 @@ body {
         display: flex;
         flex-direction: row;
         align-items: center;
+        text-decoration: none;
+        color: #ffffff;
+    }
+
+    .product__button__btn a:hover {
         text-decoration: none;
         color: #ffffff;
     }
@@ -604,6 +643,7 @@ body {
     line-height: 33px;
     text-align: center;
     color: #000000;
+    margin-bottom: 35px;
 }
 
 .delivery__text p {
@@ -884,7 +924,7 @@ body {
     right: 500px;
     top: 95px;
     width: 100%;
-    height: 240px;
+    height: 260px;
     background-color: white;
     transition: 1s ease;
 }
@@ -1031,7 +1071,7 @@ body {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 240px;
+        height: 260px;
     }
 
     .non__active__header {
@@ -1082,6 +1122,7 @@ body {
     }
 
     .header__img__text {
+        margin-top: 100px;
         margin-bottom: 50px;
     }
 
@@ -1174,7 +1215,7 @@ body {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 240px;
+        height: 260px;
     }
 
     .non__active__header {
@@ -1225,6 +1266,7 @@ body {
     }
 
     .header__img__text {
+        margin-top: 100px;
         margin-bottom: 50px;
     }
 
@@ -1348,6 +1390,12 @@ body {
 
 @media (min-width: 400px) and (max-width: 499px) {
 
+    /* TABLE CART */
+
+    .table {
+        font-size: 12px !important;
+    }
+
     /* MODAL WINDOW  */
 
     .modal-contents {
@@ -1358,7 +1406,7 @@ body {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 240px;
+        height: 260px;
     }
 
     .non__active__header {
@@ -1417,6 +1465,7 @@ body {
     }
 
     .header__img__text {
+        margin-top: 100px;
         margin-bottom: 50px;
     }
 
@@ -1558,6 +1607,12 @@ body {
 
 @media(max-width: 399px) {
 
+    /* TABLE CART */
+
+    .table {
+        font-size: 11px !important;
+    }
+
     /* MODAL WINDOW  */
 
     .modal-contents {
@@ -1567,7 +1622,7 @@ body {
     .mobile__header__content {
         display: block;
         right: 1200px;
-        height: 240px;
+        height: 260px;
     }
 
     .mobile__phone__numbers a {
@@ -1631,6 +1686,7 @@ body {
     }
 
     .header__img__text {
+        margin-top: 100px;
         margin-bottom: 50px;
     }
 
@@ -1784,7 +1840,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 90px;
+    margin-top: 150px;
+    margin-bottom: 150px;
 }
 
 .about__product__img {
@@ -1792,9 +1849,9 @@ body {
     margin-right: 50px;
 }
 
-    .about__product__img img {
-        width: 100%;
-    }
+.about__product__img img {
+    width: 100%;
+}
 
 .about__product__text {
     display: flex;
@@ -1932,19 +1989,25 @@ body {
 
 .product__pagination__number {
     margin-right: 15px;
-    padding: 9px 15px;
-    border: 1px solid #205A4F;
+    padding: 6px 15px;
+    border: 1px solid #385f8a;
+    border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
     text-decoration: none;
-    color: #205A4F;
+    color: #385f8a;
+}
+
+.product__pagination__number:hover {
+    text-decoration: none;
+    color: #385f8a;
 }
 
 .pagination__active {
-    color: #ffffff;
-    background-color: #205A4F;
+    color: #ffffff !important;
+    background-color: #385f8a;
 }
 
 @media (max-width: 500px) {
@@ -1964,4 +2027,40 @@ body {
         line-height: 38px;
         margin-top: 90px;
     }
+}
+
+
+/* CART */
+
+.product_cart_btn {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 31px;
+    text-decoration: none;
+    color: #385f8a;
+}
+
+.header__nav__cart {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.cart_icon {
+    width: 25px;
+}
+
+.cart_total {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background-color: red;
+    width: 22px;
+    height: 19px;
+    border-radius: 50%;
+    font-size: 14px;
 }
