--- a/OnlineStore/Views/Manage/Index.cshtml
+++ b/OnlineStore/Views/Manage/Index.cshtml
@@ -3,10 +3,10 @@
     ViewBag.Title = "Управление";
 }
 
-<h2>@ViewBag.Title.</h2>
+@Html.Partial("HeaderPartial", "Управление")
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-<div>
+<div style="width: 40%; margin: 90px auto;">
     <h4>Изменение параметров учетной записи</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -30,13 +30,13 @@
         </dd>
         @*
             Номера телефонов можно использовать в качестве второго проверочного фактора для системы двухфакторной проверки подлинности.
-             
+
              В <a href="https://go.microsoft.com/fwlink/?LinkId=403804">этой статье</a>
                 можно узнать, как для этого приложения ASP.NET настроить двухфакторную проверку подлинности с использованием SMS.
-             
+
              Настроив двухфакторную проверку подлинности, раскомментируйте следующий блок
         *@
-        @*  
+        @*
             <dt>Номер телефона:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
