--- a/OnlineStore/Views/Cart/Index.cshtml
+++ b/OnlineStore/Views/Cart/Index.cshtml
@@ -8,7 +8,7 @@
 
 @Html.Partial("HeaderPartial", "Корзина")
 
-<div class="table-responsive table-striped" style=" width: 80%; margin: 150px auto;">
+<div class="table-responsive table-striped" style="width: 80%;margin: 150px auto;display: flex;flex-direction: column;justify-content: space-between;align-items: center;">
     <table class="table">
         <thead>
             <tr>
