--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -35,11 +35,11 @@
         <div class="mobile__header__content">
 
             <div class="mobile__header__content__text">
-                @Html.ActionLink("ГЛАВНАЯ", "Index", "Home", null, null)
                 <a href="#services">О НАС</a>
                 <a href="#request__application">ПРОДУКЦИЯ</a>
-                <a href="#advantages">ПРОИЗВОДСТВО</a>
                 <a href="#contacts">ДОСТАВКА</a>
+
+                @Html.Partial("_LoginPartial")
             </div>
 
         </div>
@@ -52,12 +52,10 @@
             @Html.ActionLink("OnlineStore", "Index", "Home", null, new { @class = "header__nav__text__link" })
 
             <div class="nav__text__links">
-                @Html.ActionLink("ГЛАВНАЯ", "Index", "Home", null, new { @class = "header__nav__link" })
                 <a href="#" class="header__nav__link">О НАС</a>
                 <a href="#" class="header__nav__link">
                     ПРОДУКЦИЯ
                 </a>
-                <a href="#" class="header__nav__link">ПРОИЗВОДСТВО</a>
                 <a href="#" class="header__nav__link">ДОСТАВКА</a>
             </div>
 
@@ -67,6 +65,8 @@
                 </a>
                 <span class="cart_total">0</span>
             </div>
+
+            @Html.Partial("_LoginPartial")
         </div>
     </div>
 
@@ -98,7 +98,10 @@
     {
 <img src="/Products/Image?filename=@item.Photo" />                }
     <span class="product__content__block__header">@item.Name</span>
-    <p>@item.Description Color: @item.Color</p>
+    <p>
+        @item.Description <br />
+        Quantity : @item.Quantity
+    </p>
 
     <div class="product__items__block__price__order">
         <span class="product__items__block__price">@item.Price $</span>
