--- a/OnlineStore/Views/Manage/ManageLogins.cshtml
+++ b/OnlineStore/Views/Manage/ManageLogins.cshtml
@@ -4,13 +4,17 @@
     ViewBag.Title = "Управление внешними именами входа";
 }
 
-<h2>@ViewBag.Title.</h2>
+@Html.Partial("HeaderPartial", "Управление внешними именами входа")
 
 <p class="text-success">@ViewBag.StatusMessage</p>
+
+
+
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
-        <div>
+    if (loginProviders.Count() == 0)
+    {
+        <div style="margin: 100px 0px; text-align: center;">
             <p>
                 Внешние службы проверки подлинности не настроены. В <a href="https://go.microsoft.com/fwlink/?LinkId=313242">этой статье</a>
                 приведены сведения о настройке входа через внешние службы для этого приложения ASP.NET.
@@ -57,12 +61,12 @@
             {
                 @Html.AntiForgeryToken()
                 <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in Model.OtherLogins)
-                    {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Войти с помощью учетной записи @p.Caption">@p.AuthenticationType</button>
-                    }
-                </p>
+                    <p>
+                        @foreach (AuthenticationDescription p in Model.OtherLogins)
+                        {
+                            <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Войти с помощью учетной записи @p.Caption">@p.AuthenticationType</button>
+                        }
+                    </p>
                 </div>
             }
         }
