--- a/OnlineStore/Views/Shared/HeaderPartial.cshtml
+++ b/OnlineStore/Views/Shared/HeaderPartial.cshtml
@@ -31,13 +31,12 @@
         <div class="mobile__header__content">
 
             <div class="mobile__header__content__text">
-                @Html.ActionLink("ГЛАВНАЯ", "Index", "Home", null, null)
                 <a href="#services">О НАС</a>
                 <a href="#request__application">ПРОДУКЦИЯ</a>
-                <a href="#advantages">ПРОИЗВОДСТВО</a>
                 <a href="#contacts">ДОСТАВКА</a>
-            </div>
 
+                @Html.Partial("_LoginPartial")
+            </div>
         </div>
 
 
@@ -48,21 +47,21 @@
             @Html.ActionLink("OnlineStore", "Index", "Home", null, new { @class = "header__nav__text__link" })
 
             <div class="nav__text__links">
-                @Html.ActionLink("ГЛАВНАЯ", "Index", "Home", null, new { @class = "header__nav__link" })
                 <a href="#" class="header__nav__link">О НАС</a>
                 <a href="#" class="header__nav__link">
                     ПРОДУКЦИЯ
                 </a>
-                <a href="#" class="header__nav__link">ПРОИЗВОДСТВО</a>
                 <a href="#" class="header__nav__link">ДОСТАВКА</a>
             </div>
 
             <div class="header__nav__cart">
-                <a href="~/Cart/Summary/">
+                <a href="~/Cart/Index/">
                     <img class="cart_icon" src="~/Content/img/icons/shopping-cart.svg">
                 </a>
                 <span class="cart_total">0</span>
             </div>
+
+            @Html.Partial("_LoginPartial")
         </div>
     </div>
 
