--- a/OnlineStore/Views/Manage/Index.cshtml
+++ b/OnlineStore/Views/Manage/Index.cshtml
@@ -84,4 +84,7 @@
                 }*@
         </dd>
     </dl>
+
+    <h4>Перейти к подтверждению заказов</h4>
+    <a href="~/SalesPerson/">Перейти к подтверждению заказов</a>
 </div>
