--- a/OnlineStore/Views/Cart/Checkout.cshtml
+++ b/OnlineStore/Views/Cart/Checkout.cshtml
@@ -14,10 +14,31 @@
 
     @using (Html.BeginForm())
     {
+        @Html.ValidationSummary();
         <h3>Данные</h3>
         <div class="form-group">
-            <label>Ваше имя:</label>
-            @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+            <label>Имя:</label>
+            @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label>Отчество:</label>
+            @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label>Фамилия:</label>
+            @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            <label>Телефон:</label>
+            @Html.TextBoxFor(x => x.MobilePhone, new { @class = "form-control", @type = "tel" })
+        </div>
+
+        <div class="form-group">
+            <label>Email:</label>
+            @Html.TextBoxFor(x => x.Email, new { @class = "form-control", @type = "email" })
         </div>
 
         <h3>Адрес доставки</h3>
@@ -31,7 +52,10 @@
         </div>
         <div class="form-group">
             <label>Страна:</label>
-            @Html.TextBoxFor(x => x.Country, new { @class = "form-control" })
+            @Html.DropDownListFor(m => m.Country,
+            new SelectList(Enum.GetValues(typeof(Country))),
+            "Select Country",
+            new { @class = "form-control" })
         </div>
 
         <div class="text-right">
