--- a/OnlineStore/Views/Cart/Checkout.cshtml
+++ b/OnlineStore/Views/Cart/Checkout.cshtml
@@ -8,7 +8,7 @@
 
 @Html.Partial("HeaderPartial", "Оформить заказ ")
 
-<div style="width: 40%; margin: 90px auto;">
+<div class="form__order">
 
     <p>Пожалуйста введи ваши контактные данные, и мы сразу отправим товар!</p>
 
