--- a/OnlineStore/Views/Cart/Index.cshtml
+++ b/OnlineStore/Views/Cart/Index.cshtml
@@ -20,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var line in Model.Cart.Lines)
+            @foreach (var line in Model.Cart.Lines())
             {
                 <tr>
                     <td class="text-center">@line.Quantity</td>
